# homebrain

./: .gitignore  DEPLOYMENT.md  fileDescriptions.json  insteonplmbuild.md  package.json
client/: .env.example  index.html  vite.config.ts
client/public/scripts/: console-utils.js
client/src/: App.tsx
client/src/api/: api.ts  auth.ts  automations.ts  devices.ts  discovery.ts  elevenLabs.ts  maintenance.ts  profiles.ts  remoteDevices.ts  scenes.ts  security.ts  settings.ts  smartThings.ts  voice.ts
client/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx  VoiceSelector.tsx
client/src/contexts/: AuthContext.tsx
client/src/pages/: Automations.tsx  BlankPage.tsx  Dashboard.tsx  (+6 more)
docs/: configuration.md  insteon-bridge.md  jetson-setup.md  troubleshooting.md
docs/insteon/: device-schema.md  requirements.md
remote-device/: README.md  index.js  install.sh  package.json
remote-device/insteon/: README.md  pyproject.toml
remote-device/insteon/homebrain_insteon/: __init__.py  __main__.py  bridge.py  config.py  devices.py  http.py
scripts/: install-jetson.sh  mock_insteon_smoke.py  setup-services.sh  startInsteonService.js
server/: .env.example  package.json  server.js
server/config/: database.js
server/middleware/: auth.js
server/models/: Automation.js  Device.js  RemoteDevice.js  Scene.js  SecurityAlarm.js  Settings.js  SmartThingsIntegration.js  User.js  UserProfile.js  VoiceCommand.js  VoiceDevice.js  init.js
server/services/: userStore.js
server/utils/: insteonClient.js  password.js  tokens.js
shared/config/: roles.js
shared/types/: user.ts
(+10 files in other folders)
